Updated Project (Wifi Failure)
Updated my project with the up to date version, after going a week without wifi - this includes, the login, signup navigation and a few test files that will be removed in the main project

--- a/coffida_project/android/app/build.gradle
+++ b/coffida_project/android/app/build.gradle
@@ -129,7 +129,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.coffida_project"
+        applicationId "com.myproject"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
