--- a/coffida_project/android/app/src/main/AndroidManifest.xml
+++ b/coffida_project/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-  package="com.coffida_project">
+  package="com.myproject">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
