--- a/coffida_project/ios/Podfile
+++ b/coffida_project/ios/Podfile
@@ -3,12 +3,12 @@ require_relative '../node_modules/@react-native-community/cli-platform-ios/nativ
 
 platform :ios, '10.0'
 
-target 'coffida_project' do
+target 'myProject' do
   config = use_native_modules!
 
   use_react_native!(:path => config["reactNativePath"])
 
-  target 'coffida_projectTests' do
+  target 'myProjectTests' do
     inherit! :complete
     # Pods for testing
   end
@@ -23,10 +23,10 @@ target 'coffida_project' do
   end
 end
 
-target 'coffida_project-tvOS' do
-  # Pods for coffida_project-tvOS
+target 'myProject-tvOS' do
+  # Pods for myProject-tvOS
 
-  target 'coffida_project-tvOSTests' do
+  target 'myProject-tvOSTests' do
     inherit! :search_paths
     # Pods for testing
   end
